Inicio do Layout estatico

--- a/index.html
+++ b/index.html
@@ -1,12 +1,75 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
     <title>Fashion Drive</title>
 </head>
+
 <body>
-    
+    <header>
+        <!-- logo -->
+        <img src="imagens/Logo.png" class="logo">
+
+    </header>
+    <main>
+        <!--Fazendo Pedidos -->
+        <Div class="left">
+            <!-- Modelo -->
+            <div class="modelo">
+                <p>Escolha o Tecido</p>
+                <div class="estilos">
+                    <img class="imageBackground" src="imagens/tshirt.png">
+                    <img class="imageBackground" src="imagens/Mangalonga.png">
+                    <img class="imageBackground" src="imagens/Camiseta.png">
+                </div>
+
+            </div>
+            <!-- Gola -->
+            <div class="gola">
+                <p>Escolha o Tecido</p>
+                <div class="estilos">
+                    <img class="imageBackground" src="imagens/GolaV.png">
+                    <img class="imageBackground" src="imagens/GolaRedonda.png">
+                    <img class="imageBackground" src="imagens/GolaPolo.png">
+                </div>
+
+            </div>
+            <!-- Tecido -->
+            <div class="tecido">
+                <p>Escolha o Tecido</p>
+                <div class="estilos">
+                    <img class="imageBackground" src="imagens/Seda.png">
+                    <img class="imageBackground" src="imagens/Algodão.png">
+                    <img class="imageBackground" src="imagens/Poliester.png">
+                </div>
+
+            </div>
+            <!-- Confirmação do Pedido -->
+            <div class="imagem-url">
+                <p>Imagem de Referência</p>
+                <input type="url" placeholder="Insira o link" id="Url-reference">
+
+            </div>
+            <button>Confirmar Pedido</button>
+
+        </Div>
+        <!-- ilustração -->
+        <div class="right">
+            <img src="imagens/ilustração.png" class="ilustração">
+
+        </div>
+
+    </main>
+    <footer>
+        <!-- ultimos pedidos -->
+
+    </footer>
+
 </body>
+
 </html>
