--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <title>Fashion Drive</title>
@@ -19,35 +24,56 @@
     <main>
         <!--Fazendo Pedidos -->
         <Div class="left">
-            <!-- Modelo -->
-            <div class="modelo">
-                <p>Escolha o Tecido</p>
-                <div class="estilos">
-                    <img class="imageBackground" src="imagens/tshirt.png">
-                    <img class="imageBackground" src="imagens/Mangalonga.png">
-                    <img class="imageBackground" src="imagens/Camiseta.png">
-                </div>
+            <div class="Compra">
 
-            </div>
-            <!-- Gola -->
-            <div class="gola">
-                <p>Escolha o Tecido</p>
-                <div class="estilos">
-                    <img class="imageBackground" src="imagens/GolaV.png">
-                    <img class="imageBackground" src="imagens/GolaRedonda.png">
-                    <img class="imageBackground" src="imagens/GolaPolo.png">
-                </div>
+                <!-- Modelo -->
+                <div class="modelo">
+                    <p>Escolha o Modelo</p>
+                    <div class="estilos">
+                        <div class="imageBackground">
+                            <img src="imagens/tshirt.png">
+                        </div>
+                        <div class="imageBackground">
+                            <img src="imagens/Mangalonga.png">
+                        </div>
+                        <div class="imageBackground">
+                            <img src="imagens/Camiseta.png">
+                        </div>
+                    </div>
 
-            </div>
-            <!-- Tecido -->
-            <div class="tecido">
-                <p>Escolha o Tecido</p>
-                <div class="estilos">
-                    <img class="imageBackground" src="imagens/Seda.png">
-                    <img class="imageBackground" src="imagens/Algodão.png">
-                    <img class="imageBackground" src="imagens/Poliester.png">
                 </div>
+                <!-- Gola -->
+                <div class="gola">
+                    <p>Escolha a Gola</p>
+                    <div class="estilos">
+                        <div class="imageBackground">
+                            <img src="imagens/GolaV.png">
+                        </div>
+                        <div class="imageBackground">
+                            <img src="imagens/GolaRedonda.png">
+                        </div>
+                        <div class="imageBackground">
+                            <img src="imagens/GolaPolo.png">
+                        </div>
+                    </div>
 
+                </div>
+                <!-- Tecido -->
+                <div class="tecido">
+                    <p>Escolha o Tecido</p>
+                    <div class="estilos">
+                        <div class="imageBackground">
+                            <img src="imagens/Seda.png">
+                        </div>
+                        <div class="imageBackground">
+                            <img src="imagens/Algodão.png">
+                        </div>
+                        <div class="imageBackground">
+                            <img " src=" imagens/Poliester.png">
+                        </div>
+                    </div>
+
+                </div>
             </div>
             <!-- Confirmação do Pedido -->
             <div class="imagem-url">
@@ -67,6 +93,39 @@
     </main>
     <footer>
         <!-- ultimos pedidos -->
+        <h2>Ultimos pedidos</h2>
+        <div class="ultimos-pedidos">
+            <div class="background-pedido">
+                <img src="imagens/Blusa1.png">
+                <p>
+                    <span>Criador:</span>teste
+                </p>
+            </div>
+            <div class="background-pedido">
+                <img src="imagens/Blusa1.png">
+                <p>
+                    <span>Criador:</span>teste
+                </p>
+            </div>
+            <div class="background-pedido">
+                <img src="imagens/Blusa1.png">
+                <p>
+                    <span>Criador:</span>teste
+                </p>
+            </div>
+            <div class="background-pedido">
+                <img src="imagens/Blusa1.png">
+                <p>
+                    <span>Criador:</span>teste
+                </p>
+            </div>
+            <div class="background-pedido">
+                <img src="imagens/Blusa1.png">
+                <p>
+                    <span>Criador:</span>teste
+                </p>
+            </div>
+        </div>
 
     </footer>
 
