--- a/index.html
+++ b/index.html
@@ -30,14 +30,23 @@
                 <div class="modelo">
                     <p>Escolha o Modelo</p>
                     <div class="estilos">
-                        <div class="imageBackground">
-                            <img src="imagens/tshirt.png">
+                        <div class="card-de-escolha">
+                            <div class="imageBackground">
+                                <img src="imagens/tshirt.png">
+                            </div>
+                            <p>T-shirt</p>
                         </div>
-                        <div class="imageBackground">
-                            <img src="imagens/Mangalonga.png">
+                        <div class="card-de-escolha">
+                            <div class="imageBackground">
+                                <img src="imagens/Camiseta.png">
+                            </div>
+                            <p>Camiseta</p>
                         </div>
-                        <div class="imageBackground">
-                            <img src="imagens/Camiseta.png">
+                        <div class="card-de-escolha">
+                            <div class="imageBackground">
+                                <img src="imagens/Mangalonga.png">
+                            </div>
+                            <p>Manga longa</p>
                         </div>
                     </div>
 
@@ -46,30 +55,47 @@
                 <div class="gola">
                     <p>Escolha a Gola</p>
                     <div class="estilos">
-                        <div class="imageBackground">
-                            <img src="imagens/GolaV.png">
+                        <div class="card-de-escolha">
+                            <div class="imageBackground">
+                                <img src="imagens/GolaV.png">
+                            </div>
+                            <p>Gola V</p>
                         </div>
-                        <div class="imageBackground">
-                            <img src="imagens/GolaRedonda.png">
+                        <div class="card-de-escolha">
+                            <div class="imageBackground">
+                                <img src="imagens/GolaRedonda.png">
+                            </div>
+                            <p>Gola Redonda</p>
                         </div>
-                        <div class="imageBackground">
-                            <img src="imagens/GolaPolo.png">
+                        <div class="card-de-escolha">
+                            <div class="imageBackground">
+                                <img src="imagens/GolaPolo.png">
+                            </div>
+                            <p>Gola Polo</p>
                         </div>
                     </div>
-
                 </div>
                 <!-- Tecido -->
                 <div class="tecido">
                     <p>Escolha o Tecido</p>
                     <div class="estilos">
-                        <div class="imageBackground">
-                            <img src="imagens/Seda.png">
+                        <div class="card-de-escolha">
+                            <div class="imageBackground">
+                                <img src="imagens/Seda.png">
+                            </div>
+                            <p>Seda</p>
                         </div>
-                        <div class="imageBackground">
-                            <img src="imagens/Algodão.png">
+                        <div class="card-de-escolha">
+                            <div class="imageBackground">
+                                <img src="imagens/Algodão.png">
+                            </div>
+                            <p>Algodão</p>
                         </div>
-                        <div class="imageBackground">
-                            <img " src=" imagens/Poliester.png">
+                        <div class="card-de-escolha">
+                            <div class="imageBackground">
+                                <img src=" imagens/Poliester.png">
+                            </div>
+                            <p>Poliester</p>
                         </div>
                     </div>
 
