funçao post e funcoes incompletas como comentario

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <input type="url" required placeholder="Insira o link" id="Url-reference">
 
             </div>
-            <button disabled>Confirmar Pedido</button>
+            <button id="button" onclick="sendRequest()">Confirmar Pedido</button>
 
         </Div>
         <!-- ilustração -->
